<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <FrameLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".GameMenuActivity">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/game_menu"
            android:name="com.example.piraterun.ui.gamemenu.GameMenuFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>
</ScrollView>
